--- a/src/styles/Visuals.css
+++ b/src/styles/Visuals.css
@@ -51,14 +51,14 @@
     border: 10px solid rgb(255, 255, 255);
     border-radius: 10px;
     z-index: 1;
-    width: 200px;
-    height:100px;
+    width: 350px;
+    height:300px;
     background-color: rgb(255, 255, 255);
     color: rgb(255, 255, 255);
     font-family: Helvetica, Arial;
     font-weight: 900;
-    font-size: 30px;
-    animation: flash 0.952s linear 26s;
+    font-size: 100px;
+    animation: flash 0.952s linear 37.5s;
     animation-iteration-count: infinite;
     z-index: 0;
 }
@@ -68,13 +68,13 @@
 
 @keyframes flash {
     from {
-        border: 10px solid rgb(135, 135, 135);
-        background: radial-gradient(rgb(255, 55, 0) 50% , rgb(149, 32, 0) 90%);
-        color: rgb(255, 240, 190);
+        border: 30px solid rgb(0, 0, 0);
+        background: radial-gradient(hsl(13, 100%, 25%) 1%,hsl(13, 100%, 40%) 5% , hsl(13, 100%, 25%) 10%,hsl(13, 100%, 45%) 15% , hsl(13, 100%, 25%) 20%,hsl(13, 100%, 50%) 25% , hsl(13, 100%, 30%) 30%,hsl(13, 100%, 45%) 35% , rgb(149, 32, 0) 40%,hsl(13, 100%, 45%) 50% , rgb(149, 32, 0) 60%,hsl(13, 100%, 45%) 70% , rgb(149, 32, 0) 80%,hsl(13, 100%, 50%) 90% , rgb(149, 32, 0) 100%);
+        color: rgb(142, 72, 25);
     }
     to {
-        border: 10px solid rgb(79, 79, 79);
-        background: radial-gradient(rgb(214, 46, 0) 50%, rgb(149, 32, 0))70%;
-        color: rgb(151, 121, 75);
+        border: 10px solid rgb(249, 215, 111);
+        background: radial-gradient(rgb(214, 46, 0) 10%, rgb(149, 32, 0))70%;
+        color: rgb(249, 215, 111);
     }
 }
