--- a/src/styles/Visuals.css
+++ b/src/styles/Visuals.css
@@ -1,9 +1,3 @@
-{
-    background-image: url('../assets/beyonce.jpeg');
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
 .beware {
     position: fixed;
     top:130px;
@@ -15,6 +9,19 @@
 }
 .beware[data-start='true'] {
     animation: beware 10s linear 0s forwards;
+}
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+    bottom:-30vh;
+}
+.username {
+    width: 350px;
+    height:50px;
+    margin:20px;
 }
 
 @keyframes beware {
@@ -37,15 +44,6 @@
         color:	#00ff00;
         top:-300px;
     }
-}
-.home-link {
-    display:flex;
-    justify-content: center;
-    width:100vw;
-    height:100vh;
-    align-items: center;
-    z-index: 0;
-    text-decoration: none;
 }
 .home-button {
     border: 10px solid rgb(255, 255, 255);
