--- a/src/styles/Visuals.css
+++ b/src/styles/Visuals.css
@@ -47,18 +47,18 @@
 }
 .home-button {
     border: 10px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    z-index: 1;
-    width: 350px;
-    height:300px;
+    width: 320px;
+    height:240px;
+    margin-right:65px;
+    margin-top:10vh;
     background-color: rgb(255, 255, 255);
     color: rgb(255, 255, 255);
     font-family: Helvetica, Arial;
     font-weight: 900;
-    font-size: 100px;
+    font-size: 60px;
     animation: flash 0.952s linear 37.5s;
     animation-iteration-count: infinite;
-    z-index: 0;
+    z-index: 1;
 }
 .home-button:hover {
     box-shadow: 0px 0px 40px 10px rgb(0, 255, 0);
@@ -75,4 +75,16 @@
         background: radial-gradient(rgb(214, 46, 0) 10%, rgb(149, 32, 0))70%;
         color: rgb(249, 215, 111);
     }
+}
+
+.old-tv {
+    position: fixed;
+    margin-bottom:-10vh;
+    margin-top:90px;
+    background-image: url('../assets/tv.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+    min-width: 450px;
+    height:300px;
 }
