--- a/src/styles/Visuals.css
+++ b/src/styles/Visuals.css
@@ -1,27 +1,240 @@
-.beware {
-    position: fixed;
-    top:130px;
-    width:100px;
-    margin-left: 50vw;
-    margin-right: 50vw;
-    color: white;
-    z-index: 3;
-}
-.beware[data-start='true'] {
-    animation: beware 10s linear 0s forwards;
-}
-.login-form {
+#landing-page{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-self: center;
     align-items: center;
-    position:relative;
-    bottom:-30vh;
+    flex-direction: column;
+    width:100%;
+    height:100%;
+    background-color: white;
 }
-.username {
-    width: 350px;
-    height:50px;
-    margin:20px;
+
+#landing-page[data-start='true'] {
+    animation: back 100s linear 0.75s 1 forwards;
+}
+
+@keyframes back {
+0%, 25.3% {
+    background-color: white;
+}
+25.42% {
+    background-color: rgb(0,255,0);
+}
+25.5% {
+    background-color: white;
+}
+27.9% {
+    background-color: white;
+}
+28.032% {
+    background-color: rgb(212, 0, 255);
+}
+28.1% {
+    background-color: white;
+}
+28.273% {
+    background-color: rgb(0,255,0);
+}
+28.3% {
+    background-color: white;
+}
+28.512% {
+    background-color: rgb(212, 0, 255);
+}
+28.6% {
+    background-color: white;
+}
+28.754% {
+    background-color: rgb(0,255,0);
+}
+28.8% {
+    background-color: white;
+}
+28.986% {
+    background-color: rgb(212, 0, 255);
+}
+29.1% {
+    background-color: white;
+}
+29.254% {
+    background-color: rgb(0,255,0);
+}
+29.3% {
+    background-color: white;
+}
+32.6% {
+    background-color: white;
+}
+32.796% {
+    background-color: rgb(0,255,0);
+}
+32.8% {
+    background-color: white;
+}
+32.9% {
+    background-color: white;
+}
+33.038% {
+    background-color: rgb(0,255,0);
+}
+33.1% {
+    background-color: white;
+}
+35.652% {
+    background-color: rgb(212, 0, 255);
+}
+35.7% {
+    background-color: white;
+}
+35.893% {
+    background-color: rgb(0,255,0);
+}
+35.9% {
+    background-color: white;
+}
+36.130% {
+    background-color: rgb(212, 0, 255);
+}
+36.2% {
+    background-color: white;
+}
+36.366% {
+    background-color: rgb(0,255,0);
+}
+36.4% {
+    background-color: white;
+}
+36.608% {
+    background-color: rgb(212, 0, 255);
+}
+36.7% {
+    background-color: white;
+}
+36.819% {
+    background-color: rgb(0,255,0);
+}
+36.9% {
+    background-color: white;
+}
+
+
+
+39.3% {
+    background-color: white;
+}
+39.444% {
+    background-color: rgb(212, 0, 255);
+}
+39.5% {
+    background-color: white;
+}
+39.679% {
+    background-color: rgb(0,255,0);
+}
+39.7% {
+    background-color: white;
+}
+39.922% {
+    background-color: rgb(212, 0, 255);
+}
+40.0% {
+    background-color: white;
+}
+40.162% {
+    background-color: rgb(0,255,0);
+}
+40.2% {
+    background-color: white;
+}
+40.397% {
+    background-color: rgb(212, 0, 255);
+}
+40.5% {
+    background-color: white;
+}
+40.674% {
+    background-color: rgb(0,255,0);
+}
+40.7% {
+    background-color: white;
+}
+44.0% {
+    background-color: white;
+}
+44.199% {
+    background-color: rgb(0,255,0);
+}
+44.3% {
+    background-color: white;
+}
+44.4% {
+    background-color: white;
+}
+44.444% {
+    background-color: rgb(0,255,0);
+}
+44.5% {
+    background-color: white;
+}
+46.9% {
+    background-color: white;
+}
+47.061% {
+    background-color: rgb(212, 0, 255);
+}
+47.1% {
+    background-color: white;
+}
+47.286% {
+    background-color: rgb(0,255,0);
+}
+47.3% {
+    background-color: white;
+}
+47.533% {
+    background-color: rgb(212, 0, 255);
+}
+47.6% {
+    background-color: white;
+}
+47.779% {
+    background-color: rgb(0,255,0);
+}
+47.8% {
+    background-color: white;
+}
+48.010% {
+    background-color: rgb(212, 0, 255);
+}
+48.1% {
+    background-color: white;
+}
+48.252% {
+    background-color: rgb(0,255,0);
+}
+48.3% {
+    background-color: white;
+}
+48.509% {
+    background-color: red;
+}
+50% {
+    background-color: white;
+}
+100% {
+    background-color: white;
+}
+}
+.beware {
+    text-align: center;
+    position:fixed;
+    padding-top:10rem;
+    width:100%;
+    height:100%;
+    color: white;
+    background: black;
+    margin:0;
+    font-size:7vw;
+    z-index: 2;
 }
 
 @keyframes beware {
@@ -44,47 +257,4 @@
         color:	#00ff00;
         top:-300px;
     }
-}
-.home-button {
-    border: 10px solid rgb(255, 255, 255);
-    width: 320px;
-    height:240px;
-    margin-right:65px;
-    margin-top:10vh;
-    background-color: rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
-    font-family: Helvetica, Arial;
-    font-weight: 900;
-    font-size: 60px;
-    animation: flash 0.952s linear 37.5s;
-    animation-iteration-count: infinite;
-    z-index: 1;
-}
-.home-button:hover {
-    box-shadow: 0px 0px 40px 10px rgb(0, 255, 0);
-}
-
-@keyframes flash {
-    from {
-        border: 30px solid rgb(0, 0, 0);
-        background: radial-gradient(hsl(13, 100%, 25%) 1%,hsl(13, 100%, 40%) 5% , hsl(13, 100%, 25%) 10%,hsl(13, 100%, 45%) 15% , hsl(13, 100%, 25%) 20%,hsl(13, 100%, 50%) 25% , hsl(13, 100%, 30%) 30%,hsl(13, 100%, 45%) 35% , rgb(149, 32, 0) 40%,hsl(13, 100%, 45%) 50% , rgb(149, 32, 0) 60%,hsl(13, 100%, 45%) 70% , rgb(149, 32, 0) 80%,hsl(13, 100%, 50%) 90% , rgb(149, 32, 0) 100%);
-        color: rgb(142, 72, 25);
-    }
-    to {
-        border: 10px solid rgb(249, 215, 111);
-        background: radial-gradient(rgb(214, 46, 0) 10%, rgb(149, 32, 0))70%;
-        color: rgb(249, 215, 111);
-    }
-}
-
-.old-tv {
-    position: fixed;
-    margin-bottom:-10vh;
-    margin-top:90px;
-    background-image: url('../assets/tv.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: -1;
-    min-width: 450px;
-    height:300px;
 }
